apps/paperless/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app: paperless
    spec:
      containers:
        - image: redis:8
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
