apps/paperless/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webserver
    spec:
      containers:
        - name: webserver
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15
          readinessProbe:
            httpGet:
              path: /
              port: webserver-port
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: webserver-port
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: webserver-port
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 10
          ports:
            - containerPort: 8000
              name: webserver-port
          resources: {}
          volumeMounts:
            - mountPath: /usr/src/paperless/consume
              name: paperless-consume
            - mountPath: /usr/src/paperless/data
              name: paperless-data
              subPath: data
            - mountPath: /usr/src/paperless/export
              name: paperless-data
              subPath: export
            - mountPath: /usr/src/paperless/media
              name: paperless-media
      restartPolicy: Always
      volumes:
        - name: paperless-consume
          nfs:
            server: 192.168.2.146
            path: /mnt/Personal/Dokumente/paperless-eingang
        - name: paperless-media
          nfs:
            server: 192.168.2.146
            path: /mnt/Personal/Dokumente/paperless-media
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
